--- a/mouseOver.html
+++ b/mouseOver.html
@@ -24,8 +24,8 @@
         <img src="html.png" id="image">
    </div> 
    <div>
-       <h3 id="h1">HTML</h3>
-       <h3 id="h2">CSS</h3>
+       <h3 id="h1">HTML--Hyper Text MarkUp Language</h3>
+       <h3 id="h2">CSS--Cascading Style Sheet</h3>
    </div>
    <script>
        document.getElementById("mydiv").addEventListener('mouseover',fun1);
